force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/ucinn_ascendv2__Matching_Challenge_Requirement__c.object-meta.xml
<CustomObject>
    <description>Requirements for the Challenge Object</description>
    <label>Matching Challenge Requirement</label>
    <nameField>
        <displayFormat>MCR-{0000000}</displayFormat>
        <label>Matching Challenge Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Challenge Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>