force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If filled out the Designation Details has to have this campaign.</description>
    <inlineHelpText>If filled out the Designation Details has to have this campaign.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Matching Challenge Requirements</relationshipLabel>
    <relationshipName>Matching_Challenge_Requirements_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>