force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designation Detail has to match the Designation of this requirement if its filled out.</description>
    <inlineHelpText>Designation Detail has to match the Designation of this requirement if its filled out.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Matching Challenge Requirements</relationshipLabel>
    <relationshipName>Matching_Chal_Requirements_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>