force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <description>Date at which this requirement ends.</description>
    <inlineHelpText>Date at which this requirement ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>