force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Matching_Challenge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge__c</fullName>
    <description>Matching Challenge that this requirement belongs to.</description>
    <inlineHelpText>Matching Challenge that this requirement belongs to.</inlineHelpText>
    <label>Matching Challenge</label>
    <referenceTo>ucinn_ascendv2__Matching_Challenge__c</referenceTo>
    <relationshipLabel>Matching Challenge Requirements</relationshipLabel>
    <relationshipName>Match_Chal_Require_Matching_Challenge</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>