force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Maximum_Amount__c</fullName>
    <description>Maximum Designation Detail amount in order to match. Blank if no max amount</description>
    <inlineHelpText>Maximum Designation Detail amount in order to match. Blank if no max amount</inlineHelpText>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>