force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minimum_Amount__c</fullName>
    <description>Minimum Amount that Designation Detail amount has to be.</description>
    <inlineHelpText>Minimum Amount that Designation Detail amount has to be.</inlineHelpText>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>