force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/fields/ucinn_ascendv2__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Start_Date__c</fullName>
    <description>Start Date that the Designation Detail cannot be before.</description>
    <inlineHelpText>Start Date that the Designation Detail cannot be before.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>