force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/validationRules/ucinn_ascendv2__Designation_AND_Campaign_Cannot_Be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Designation_AND_Campaign_Cannot_Be_Null</fullName>
    <active>true</active>
    <description>Designation and Campaign Cannot both be null</description>
    <errorConditionFormula>IF(AND(ucinn_ascendv2__Campaign__c == null, ucinn_ascendv2__Designation__c == null) ,true, false)</errorConditionFormula>
    <errorMessage>Designation and Campaign Cannot both be null</errorMessage>
</ValidationRule>