force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/validationRules/ucinn_ascendv2__Minimum_Amount_Less_than_Maximum_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Minimum_Amount_Less_than_Maximum_Amount</fullName>
    <active>true</active>
    <description>Minimum amount has to be less than or equal to Maximum amount</description>
    <errorConditionFormula>IF( ucinn_ascendv2__Minimum_Amount__c != NULL, IF( ucinn_ascendv2__Maximum_Amount__c != NULL, IF(ucinn_ascendv2__Minimum_Amount__c &lt;= ucinn_ascendv2__Maximum_Amount__c, false, true) , false) , false)</errorConditionFormula>
    <errorMessage>Minimum amount has to be less than or equal to Maximum amount</errorMessage>
</ValidationRule>