force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Requirement__c/validationRules/ucinn_ascendv2__Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <description>Start Date Has To Be Before End Date</description>
    <errorConditionFormula>IF( ucinn_ascendv2__Start_Date__c != NULL, IF( ucinn_ascendv2__End_Date__c!= NULL, IF((ucinn_ascendv2__Start_Date__c &lt;= ucinn_ascendv2__End_Date__c), false, true) , false) , false)</errorConditionFormula>
    <errorMessage>Start Date Has To Be Before End Date</errorMessage>
</ValidationRule>